# PauliQSC

./: .gitignore  PauliQSC.cabal  PauliQSC.leo  benchmark.hs  generate_test_data.py  template.hs  test.hs
Data/Quantum/: Operator.hs
Data/Quantum/Operator/: Qubit.hs  ReducedEschelonForm.hs  SubsystemCode.hs
Data/Quantum/Small/: Operator.hs
Data/Quantum/Small/Operator/: Qubit.hs  ReducedEschelonForm.hs  SubsystemCode.hs
