-- @+leo-ver=5-thin
-- @+node:gcross.20110724213035.1122: * @file PauliQSC.cabal
-- @@language haskell
Name:                PauliQSC
Version:             1.0
License:             BSD3
License-file:        LICENSE
Author:              Gregory Crosswhite
Maintainer:          Gregory Crosswhite <gcrosswhite@gmail.com>
Stability:           Provisional
Synopsis:            
Description:         
Cabal-version:       >=1.2.3
Build-type:          Simple
Category:	     

Library
    Build-depends:
        base == 4.*,
        containers == 0.4.*
    Exposed-modules:
        Data.Quantum.Operator
    Extensions:

Test-Suite test
    type:       exitcode-stdio-1.0
    main-is:    test.hs
    build-depends:
        base == 4.*,
        HUnit == 1.2.*,
        test-framework == 0.4.*,
        test-framework-hunit == 0.2.*,
        test-framework-quickcheck2 == 0.2.*
-- @-leo
